Update mailto body

--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
         <hr>
 
         <section id="main_content">
-          <p><strong>Everybody loves a code puzzle, right?</strong> We, the Douglas team, spend our days writing code in the wonderful
-          world of JavaScript, where anything can happen. We have a challenge for you; what happens if you run
-          this code in a browser:</p>
+          <p><strong>Everybody loves a code puzzle, right?</strong> We, the Douglas team, spend our days
+          writing code in the wonderful world of JavaScript, where
+          <a href="https://www.destroyallsoftware.com/talks/wat">anything</a>
+          can happen. We have a challenge for you; what happens if you run this code in a browser:</p>
 
           <script src="https://gist.github.com/cskeppstedt/7c06f8646ed2d993aee0.js"></script>
 
           <p>Submit your answer, complete with an explanation of what happens, to
-          <a href="mailto:nordicjs%40klarna.com?subject=nordic.js%202014%20code%20puzzle%20answer&body=Answer%3A%0A%0AExplanation%3A">nordicjs@klarna.com</a>.
+          <a href="mailto:nordicjs%40klarna.com?subject=nordic.js%202014%20code%20puzzle%20answer&body=It%20says%20X%20because%20Y">nordicjs@klarna.com</a>.
           A winner will be chosen at random (for submissions with a correct answer and explanation).</p>
         </section>
 
