Update email address and win-copy.

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
           <script src="https://gist.github.com/cskeppstedt/7c06f8646ed2d993aee0.js"></script>
 
           <p>Submit your answer, complete with an explanation of what happens, to
-          <a href="mailto:nordicjs%40klarna.com?subject=nordic.js%202014%20code%20puzzle%20answer&body=It%20says%20X%20because%20Y">nordicjs@klarna.com</a>.
-          A winner will be chosen at random (for submissions with a correct answer and explanation).</p>
+          <a href="mailto:nordic.js%40klarna.com?subject=nordic.js%202014%20code%20puzzle%20answer&body=It%20says%20X%20because%20Y">nordic.js@klarna.com</a>.
+          Submissions with a correct answer and explanation will win a t-shirt (limited stock)!</p>
         </section>
 
         <hr>
